--- a/css/blocks/inner.css
+++ b/css/blocks/inner.css
@@ -1,7 +1,7 @@
 .inner-section {
   background: #FFFFFF;
   color: #1A1B1E;
-  padding: 90px 0 78px;
+  padding: 90px 0 46px;
 }
 
 .inner-section--bg--grey {
@@ -21,6 +21,8 @@
 
 .partners__item {
   margin-left: 46px;
+  margin-bottom: 49px;
+
 }
 
 .partners__item:nth-child(4n+1) {
@@ -31,9 +33,8 @@
   text-decoration: none;
   display: flex;
   width: 250px;
-  height: 100px;
-  align-items: center;
-  justify-content: center;
+  height: 67px;
+  align-items: flex-start;
   filter: grayscale(100%);
 }
 
