--- a/css/blocks/breadcrumbs.css
+++ b/css/blocks/breadcrumbs.css
@@ -24,5 +24,5 @@
 
 /*.breadcrumbs__item--active .breadcrumbs__link {
   color: #F5170E;
-  text-decoration: none;
-}*/
+  text-decoration: none;*/
+}
