--- a/css/blocks/contacts.css
+++ b/css/blocks/contacts.css
@@ -25,7 +25,7 @@
 }
 
 .contacts__dropdown:hover .dropdown__menu {
-  left: 0;
+  display: block;
   opacity: 1;
 }
 
@@ -33,33 +33,41 @@
   position: absolute;
   background: #CDD1D2; 
   color:  #1E1F20;
-  padding: 15px 19px;
-  width: 156px;
-  top: 100%;
-  left:-9999px;
-  margin-top: 10px;
+  padding: 19px;
+  min-width: 160px;
+  top: 24px;
+  display:none;
+  right: 0;
+  border-radius: 5px;
+  text-align: left;
   opacity: 0;
   transition: opacity .5s;
 }
 
 .dropdown__menu:before {
-  content: "";
-  display: block;
-  height: 15px;
-  left: 0;
-  right: 0;
-  top: -14px;
+  content:"";
+  border: 10px solid transparent;
+  width: 0;
+  height: 0;
+  border-bottom-color: #CDD1D2;
+  border-top-width: 0;
   position: absolute;
+  top: -10px;
+  right: 40px;
+}
+
+.dropdown__menu::after {
+  display: block;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 20px;
+  top: -20px;
+  left:0;
+  background-color: transparent;
 }
 
 .dropdown__item1 {
   font-weight: bold;
 }
 
-/*.triangle {
-  border: 10px solid transparent;
-  width: 0;
-  height: 0;
-  border-bottom-color: #CDD1D2;
-  border-top-width: 0;
-}*/
