--- a/css/blocks/button.css
+++ b/css/blocks/button.css
@@ -7,6 +7,7 @@
   text-transform: uppercase;
   font-size: 14px;
   transition: background 0.7s;
+  outline: none;
 }
 
 .button:hover {
@@ -20,6 +21,7 @@
   font-weight: bold;
   text-transform: uppercase;
   font-size: 14px;
+  border: 1px solid #F5170E;
   border-color: #F5170E;
   transition: background, color 0.7s, 0.7s;
 }
