--- a/css/blocks/form.css
+++ b/css/blocks/form.css
@@ -7,11 +7,12 @@
   flex: 1;
   margin-right: 28px;
   border-radius: 4px;
-  border: none;
+  border: 1px solid transparent;
   background: #FFFFFF;
   padding: 20px 30px;
   font-size: 18px;
-  color:#1A1B1E
+  color:#1A1B1E;
+  outline: none;
 }
 
 .form__input::placeholder {
@@ -21,6 +22,10 @@
 
 .form__input:last-child {
   margin-right: 0;
+}
+
+.form__input:focus {
+  border: 1px solid #F5170E;
 }
 
 .form__input--textarea {
