--- a/css/blocks/tours.css
+++ b/css/blocks/tours.css
@@ -59,7 +59,8 @@ justify-content: space-between;
 .tours__description-block {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 18px
+  margin-bottom: 18px;
+  align-items: center;
 }
 
 .tours__description-block:last-child {
