--- a/css/blocks/button.css
+++ b/css/blocks/button.css
@@ -38,6 +38,7 @@
   font-weight: bold;
   text-transform: uppercase;
   font-size: 14px;
+  border: 1px solid #F5170E;
   border-color: #F5170E;
   transition: background, color 0.7s, 0.7s;
 }
