--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -47,7 +47,7 @@
   width: 36px;
   background: center center no-repeat;
   position: relative;
-  opacity: .5s;
+  opacity: .5;
   transition: .3s;
 }
 
@@ -83,18 +83,3 @@
 
 
 
-.social__item--icon--insta .social__link:hover:after {
-  background-position: -122px -10px;
-}
-
-.social__item--icon--fb .social__link:hover:after {
-  background-position: -10px -10px;
-}
-
-.social__item--icon--vk .social__link:hover:after {
-  background-position: -346px -10px;
-}
-
-.social__item--icon--telegram .social__link:hover:after {
-  background-position: -234px -10px;
-}
